Update retrofit and rxjava versions, dropped support for JRE 6 and 7